Correct more overflow

--- a/Components/Navbar.module.css
+++ b/Components/Navbar.module.css
@@ -87,7 +87,6 @@ a.link {
     position: absolute;
     bottom: 7rem;
     right: -2rem;
-    right: 0;
     width: 6.25rem;
     height: 12.5rem;
     background: url('../public/images/bg-pattern-about-1-mobile-nav-1.svg') no-repeat;
