--- a/styles/index.css
+++ b/styles/index.css
@@ -398,8 +398,8 @@ main {
     content: '';
     position: absolute;
     bottom: -6.20rem;
-    right: -8rem;
-    width: 12.5rem;
+    right: -1.5rem;
+    width: 6.5rem;
     height: 12.5rem;
     background: url('../public/images/bg-pattern-about-1-mobile-nav-1.svg') no-repeat;
     z-index: -1;
@@ -545,14 +545,7 @@ main {
 
 @media screen and (min-width: 768px) {
     .mainAboutSection::before {
-        content: '';
-        position: absolute;
-        bottom: 0rem;
-        right: -11.5rem;
-        width: 12.5rem;
-        height: 12.5rem;
-        background: url('../public/images/bg-pattern-about-1-mobile-nav-1.svg') no-repeat;
-        z-index: -1;
+        right: -5rem;
     }
 
 
@@ -592,15 +585,15 @@ main {
     .containerNavAndHero::before {
         content: '';
         position: absolute;
-        width: 12.5rem;
-        height: 12.5rem;
+
         background-image: url(/_next/static/media/bg-pattern-home-1.502807f1.svg);
         left: -7rem;
         top: 18rem;
     }
 
     .mainAboutSection::before {
-        right: -16.5rem;
+        right: -10rem;
     }
+
 
 }
